--- a/environment/conda.yaml
+++ b/environment/conda.yaml
@@ -2,526 +2,65 @@ name: construct
 channels:
   - pytorch
   - nvidia
-  - conda-forge
+  - conda-forge 
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - aiohappyeyeballs=2.4.4=py311h06a4308_0
-  - annotated-types=0.7.0=pyhd8ed1ab_0
-  - anyio=4.6.2=py311h06a4308_0
-  - aom=3.6.0=h6a678d5_0
-  - argon2-cffi=21.3.0=pyhd3eb1b0_0
-  - argon2-cffi-bindings=21.2.0=py311h5eee18b_1
-  - asttokens=3.0.0=pyhd8ed1ab_0
-  - async-lru=2.0.4=py311h06a4308_0
-  - attrs=24.3.0=py311h06a4308_0
-  - audioread=3.0.1=py311h38be061_2
-  - babel=2.16.0=py311h06a4308_0
-  - beautifulsoup4=4.12.3=py311h06a4308_0
-  - blas=1.0=mkl
-  - bleach=6.2.0=py311h06a4308_0
-  - blosc=1.21.3=h6a678d5_0
-  - bottleneck=1.4.2=py311hf4808d0_0
-  - brotli=1.0.9=h5eee18b_8
-  - brotli-bin=1.0.9=h5eee18b_8
-  - brotli-python=1.0.9=py311ha362b79_8
-  - brunsli=0.1=h9c3ff4c_0
-  - bzip2=1.0.8=h5eee18b_6
-  - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2025.2.25=h06a4308_0
-  - cairo=1.16.0=hb05425b_5
-  - cffi=1.17.1=py311hf29c0ef_0
-  - cfitsio=3.470=hb418390_7
-  - charls=2.2.0=h9c3ff4c_0
-  - comm=0.2.2=pyhd8ed1ab_0
-  - contourpy=1.2.0=py311hdb19cb5_0
-  - cuda-cudart=11.8.89=0
-  - cuda-cupti=11.8.87=0
-  - cuda-libraries=11.8.0=0
-  - cuda-nvrtc=11.8.89=0
-  - cuda-nvtx=11.8.86=0
-  - cuda-runtime=11.8.0=0
-  - cuda-version=12.8=3
-  - cudnn=9.3.0.75=cuda12.6
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - cyrus-sasl=2.1.28=h52b45da_1
-  - dav1d=1.2.1=hd590300_0
-  - dbus=1.13.18=hb2f20db_0
-  - debugpy=1.8.9=py311hfdbb021_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - defusedxml=0.7.1=pyhd3eb1b0_0
-  - eigen=3.4.0=hdb19cb5_0
-  - eval-type-backport=0.2.0=pyhd8ed1ab_0
-  - eval_type_backport=0.2.0=pyha770c72_0
-  - exceptiongroup=1.2.2=pyhd8ed1ab_0
-  - executing=2.1.0=pyhd8ed1ab_0
-  - expat=2.6.3=h6a678d5_0
-  - ffmpeg=4.2.2=h20bf706_0
-  - filelock=3.13.1=py311h06a4308_0
-  - fontconfig=2.14.1=h55d465d_3
-  - fonttools=4.51.0=py311h5eee18b_0
-  - freetype=2.12.1=h4a9f257_0
-  - frozenlist=1.5.0=py311h5eee18b_0
-  - gettext=0.22.5=he02047a_3
-  - gettext-tools=0.22.5=he02047a_3
-  - giflib=5.2.2=hd590300_0
-  - glib=2.78.4=h6a678d5_0
-  - glib-tools=2.78.4=h6a678d5_0
-  - gmp=6.2.1=h295c915_3
-  - gmpy2=2.1.2=py311hc9b5ff0_0
-  - gnutls=3.6.15=he1e5248_0
-  - graphite2=1.3.14=h295c915_1
-  - greenlet=3.1.1=py311h6a678d5_0
-  - gst-plugins-base=1.14.1=h6a678d5_1
-  - gstreamer=1.14.1=h5eee18b_1
-  - h11=0.14.0=py311h06a4308_0
-  - harfbuzz=4.3.0=hf52aaf7_2
-  - hdf5=1.12.1=h2b7332f_3
-  - icu=73.1=h6a678d5_0
-  - imagecodecs=2023.1.23=py311h8105a5c_0
-  - imageio=2.36.0=pyh12aca89_1
-  - importlib-metadata=8.5.0=pyha770c72_0
-  - intel-openmp=2023.1.0=hdb19cb5_46306
-  - ipykernel=6.29.5=pyh3099207_0
-  - ipython=8.30.0=pyh707e725_0
-  - ipywidgets=8.1.5=py311h06a4308_0
-  - jedi=0.19.2=pyhff2d567_0
-  - joblib=1.4.2=py311h06a4308_0
-  - jpeg=9e=h5eee18b_3
-  - json5=0.9.25=py311h06a4308_0
-  - jsonpatch=1.33=py311h06a4308_1
-  - jsonpointer=2.1=pyhd3eb1b0_0
-  - jsonschema=4.23.0=py311h06a4308_0
-  - jsonschema-specifications=2023.7.1=py311h06a4308_0
-  - jupyter=1.1.1=py311h06a4308_0
-  - jupyter-lsp=2.2.5=py311h06a4308_0
-  - jupyter_client=8.6.3=pyhd8ed1ab_0
-  - jupyter_console=6.6.3=py311h06a4308_0
-  - jupyter_core=5.7.2=py311h06a4308_0
-  - jupyter_events=0.12.0=py311h06a4308_0
-  - jupyter_server=2.15.0=py311h06a4308_0
-  - jupyter_server_terminals=0.5.3=py311h06a4308_0
-  - jupyterlab=4.3.4=py311h06a4308_0
-  - jupyterlab_pygments=0.3.0=py311h06a4308_0
-  - jupyterlab_server=2.27.3=py311h06a4308_0
-  - jupyterlab_widgets=3.0.13=py311h06a4308_0
-  - jxrlib=1.1=hd590300_3
-  - kiwisolver=1.4.4=py311h6a678d5_0
-  - krb5=1.20.1=h143b758_1
-  - lame=3.100=h7b6447c_0
-  - langsmith=0.1.147=py311h06a4308_0
-  - lazy-loader=0.4=pyhd8ed1ab_1
-  - lazy_loader=0.4=pyhd8ed1ab_1
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.40=h12ee557_0
-  - lerc=3.0=h295c915_0
-  - libabseil=20240116.2=cxx17_h6a678d5_0
-  - libaec=1.0.6=h9c3ff4c_0
-  - libasprintf=0.22.5=he8f35ee_3
-  - libasprintf-devel=0.22.5=he8f35ee_3
-  - libavif=0.11.1=h5eee18b_0
-  - libbrotlicommon=1.0.9=h5eee18b_8
-  - libbrotlidec=1.0.9=h5eee18b_8
-  - libbrotlienc=1.0.9=h5eee18b_8
-  - libclang13=14.0.6=default_he11475f_1
-  - libcublas=11.11.3.6=0
-  - libcufft=10.9.0.58=0
-  - libcufile=1.13.0.11=0
-  - libcups=2.4.2=h2d74bed_1
-  - libcurand=10.3.9.55=0
-  - libcurl=8.9.1=h251f7ec_0
-  - libcusolver=11.4.1.48=0
-  - libcusparse=11.7.5.86=0
-  - libdeflate=1.17=h5eee18b_1
-  - libedit=3.1.20230828=h5eee18b_0
-  - libev=4.33=h7f8727e_1
-  - libffi=3.4.4=h6a678d5_1
-  - libflac=1.4.3=h59595ed_0
-  - libgcc=14.2.0=h77fa898_1
-  - libgcc-ng=14.2.0=h69a702a_1
-  - libgettextpo=0.22.5=he02047a_3
-  - libgettextpo-devel=0.22.5=he02047a_3
-  - libgfortran-ng=11.2.0=h00389a5_1
-  - libgfortran5=11.2.0=h1234567_1
-  - libglib=2.78.4=hdc74915_0
-  - libgomp=14.2.0=h77fa898_1
-  - libiconv=1.16=h5eee18b_3
-  - libidn2=2.3.4=h5eee18b_0
-  - libjpeg-turbo=2.0.0=h9bf148f_0
-  - libllvm14=14.0.6=hecde1de_4
-  - libnghttp2=1.57.0=h2d74bed_0
-  - libnpp=11.8.0.86=0
-  - libnvjpeg=11.9.0.86=0
-  - libogg=1.3.5=h4ab18f5_0
-  - libopus=1.3.1=h5eee18b_1
-  - libpng=1.6.39=h5eee18b_0
-  - libpq=17.0=hdbd6064_0
-  - libprotobuf=4.25.3=he621ea3_0
-  - librosa=0.10.2.post1=pyhd8ed1ab_1
-  - libsndfile=1.2.2=hc60ed4a_1
-  - libsodium=1.0.18=h36c2ea0_1
-  - libssh2=1.11.0=h251f7ec_0
-  - libstdcxx=14.2.0=hc0a3c3a_1
-  - libstdcxx-ng=14.2.0=h4852527_1
-  - libtasn1=4.19.0=h5eee18b_0
-  - libtiff=4.5.1=h6a678d5_0
-  - libunistring=0.9.10=h27cfd23_0
-  - libuuid=1.41.5=h5eee18b_0
-  - libvorbis=1.3.7=h9c3ff4c_0
-  - libvpx=1.7.0=h439df22_0
-  - libwebp=1.3.2=h11a3e52_0
-  - libwebp-base=1.3.2=h5eee18b_1
-  - libxcb=1.15=h7f8727e_0
-  - libxkbcommon=1.0.1=h097e994_2
-  - libxml2=2.13.1=hfdd30dd_2
-  - libzopfli=1.0.3=h9c3ff4c_0
-  - llvm-openmp=14.0.6=h9e868ea_0
-  - llvmlite=0.43.0=py311h6a678d5_1
-  - lz4-c=1.9.4=h6a678d5_1
-  - matplotlib=3.9.2=py311h06a4308_0
-  - matplotlib-base=3.9.2=py311h6fb44e5_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
-  - mistune=3.1.2=py311h06a4308_0
-  - mkl=2023.1.0=h213fc3f_46344
-  - mkl-service=2.4.0=py311h5eee18b_1
-  - mkl_fft=1.3.11=py311h5eee18b_0
-  - mkl_random=1.2.8=py311ha02d727_0
-  - mpc=1.1.0=h10f8cd9_1
-  - mpfr=4.0.2=hb69a4c5_1
-  - mpg123=1.32.9=hc50e24c_0
-  - mpmath=1.3.0=py311h06a4308_0
-  - msgpack-python=1.1.0=py311hd18a35c_0
-  - multidict=6.1.0=py311h5eee18b_0
-  - mysql=8.4.0=h29a9f33_1
-  - nbclient=0.10.2=py311h06a4308_0
-  - nbconvert=7.16.6=py311h06a4308_0
-  - nbconvert-core=7.16.6=py311h06a4308_0
-  - nbconvert-pandoc=7.16.6=py311h06a4308_0
-  - nbformat=5.10.4=py311h06a4308_0
-  - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - nettle=3.7.3=hbbd107a_1
-  - networkx=3.4.2=pyh267e887_2
-  - notebook=7.3.2=py311h06a4308_0
-  - notebook-shim=0.2.4=py311h06a4308_0
-  - numba=0.60.0=py311h4bc866e_0
-  - numexpr=2.10.1=py311h3c60e43_0
-  - numpy=1.26.4=py311h08b1b3b_0
-  - numpy-base=1.26.4=py311hf175353_0
-  - opencv=4.10.0=py311hab19f7d_0
-  - openh264=2.1.1=h4ff587b_0
-  - openjpeg=2.5.2=he7f1fd0_0
-  - openldap=2.6.4=h42fbc30_0
-  - openssl=3.4.1=h7b32b05_0
-  - orjson=3.10.14=py311h4aa5aa6_0
-  - overrides=7.4.0=py311h06a4308_0
-  - packaging=24.1=py311h06a4308_0
-  - pandas=2.2.2=py311ha02d727_0
-  - pandoc=2.12=h06a4308_3
-  - pandocfilters=1.5.0=pyhd3eb1b0_0
-  - parso=0.8.4=pyhd8ed1ab_0
-  - pcre2=10.42=hebb0a14_1
-  - pexpect=4.9.0=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
-  - pillow=11.0.0=py311hfdbf927_0
-  - pip=24.2=py311h06a4308_0
-  - pixman=0.40.0=h7f8727e_1
-  - platformdirs=4.3.6=pyhd8ed1ab_0
-  - ply=3.11=py311h06a4308_0
-  - pooch=1.8.2=pyhd8ed1ab_1
-  - prometheus_client=0.21.1=py311h06a4308_0
-  - prompt-toolkit=3.0.48=pyha770c72_0
-  - prompt_toolkit=3.0.48=hd8ed1ab_1
-  - psutil=6.1.0=py311h9ecbd09_0
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.3=pyhd8ed1ab_0
-  - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.10.0=pyh10f6f8f_0
-  - pydantic-core=2.27.0=py311h9e33e62_0
-  - pygments=2.18.0=pyhd8ed1ab_0
-  - pyparsing=3.2.0=py311h06a4308_0
-  - pyqt=5.15.10=py311h6a678d5_0
-  - pyqt5-sip=12.13.0=py311h5eee18b_0
-  - pysocks=1.7.1=pyha55dd90_7
-  - pysoundfile=0.12.1=pyhd8ed1ab_3
-  - python=3.11.4=h955ad1f_0
-  - python-dateutil=2.9.0post0=py311h06a4308_2
-  - python-fastjsonschema=2.20.0=py311h06a4308_0
-  - python-json-logger=3.2.1=py311h06a4308_0
-  - python-tzdata=2023.3=pyhd3eb1b0_0
-  - python_abi=3.11=2_cp311
-  - pytorch=2.5.1=py3.11_cuda11.8_cudnn9.1.0_0
-  - pytorch-cuda=11.8=h7e8668a_6
-  - pytorch-mutex=1.0=cuda
-  - pytz=2024.1=py311h06a4308_0
-  - pywavelets=1.7.0=py311h9f3472d_2
-  - pyyaml=6.0.2=py311h9ecbd09_1
-  - pyzmq=25.1.2=py311h6a678d5_0
-  - qt-main=5.15.2=hb6262e9_11
-  - qtconsole=5.6.1=py311h06a4308_1
-  - qtpy=2.4.1=py311h06a4308_0
-  - readline=8.2=h5eee18b_0
-  - referencing=0.30.2=py311h06a4308_0
-  - requests=2.32.3=py311h06a4308_1
-  - requests-toolbelt=1.0.0=py311h06a4308_0
-  - rfc3339-validator=0.1.4=py311h06a4308_0
-  - rfc3986-validator=0.1.1=py311h06a4308_0
-  - rpds-py=0.22.3=py311h4aa5aa6_0
-  - scikit-image=0.24.0=py311h7db5c69_3
-  - scikit-learn=1.5.1=py311ha02d727_0
-  - scipy=1.14.1=py311h08b1b3b_0
-  - send2trash=1.8.2=py311h06a4308_1
-  - setuptools=75.1.0=py311h06a4308_0
-  - sip=6.7.12=py311h6a678d5_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - snappy=1.1.9=hbd366e4_1
-  - sniffio=1.3.0=py311h06a4308_0
-  - soupsieve=2.5=py311h06a4308_0
-  - soxr=0.1.3=h0b41bf4_3
-  - soxr-python=0.5.0.post1=py311hfdbb021_1
-  - sqlite=3.45.3=h5eee18b_0
-  - stack_data=0.6.2=pyhd8ed1ab_0
-  - tbb=2021.8.0=hdb19cb5_0
-  - tenacity=9.0.0=py311h06a4308_0
-  - terminado=0.17.1=py311h06a4308_0
-  - threadpoolctl=3.5.0=py311h92b7b1e_0
-  - tifffile=2023.8.12=pyhd8ed1ab_0
-  - tinycss2=1.4.0=py311h06a4308_0
-  - tk=8.6.14=h39e8969_0
-  - tomli=2.1.0=pyhff2d567_0
-  - torchtriton=3.1.0=py311
-  - tornado=6.4.1=py311h5eee18b_0
-  - tqdm=4.66.5=py311h92b7b1e_0
-  - traitlets=5.14.3=pyhd8ed1ab_0
-  - tzdata=2024b=h04d1e81_0
-  - unicodedata2=15.1.0=py311h5eee18b_0
-  - wcwidth=0.2.13=pyhd8ed1ab_0
-  - webencodings=0.5.1=py311h06a4308_1
-  - websocket-client=1.8.0=py311h06a4308_0
-  - wheel=0.44.0=py311h06a4308_0
-  - widgetsnbextension=4.0.13=py311h06a4308_0
-  - x264=1!157.20191217=h7b6447c_0
-  - xz=5.4.6=h5eee18b_1
-  - yaml=0.2.5=h7f98852_2
-  - zeromq=4.3.5=h6a678d5_0
-  - zfp=1.0.1=h5888daf_2
-  - zipp=3.21.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h5eee18b_1
-  - zstandard=0.23.0=py311hbc35293_1
-  - zstd=1.5.6=hc292b87_0
+  - python=3.10
+  - pytorch
+  - torchvision
+  - torchaudio
+  - pytorch-cuda=11.8
+  - cudatoolkit=11.8
+  - pandas
+  - numpy
+  - scikit-learn
+  - matplotlib
+  - seaborn
+  - jupyterlab
+  - opencv
+  - Pillow
+  - requests
+  - beautifulsoup4
+  - tqdm
+  - pyarrow
+  - h5py
+  - librosa
+  - numba
+  - sqlalchemy
+  - mysql
+  - pip
+  - ghostscript 
+
+  # Pip Packages
   - pip:
-      - absl-py==2.1.0
-      - accelerate==1.9.0
-      - aiohttp==3.11.11
-      - aiosignal==1.3.2
-      - albucore==0.0.24
-      - albumentations==2.0.7
-      - alembic==1.16.2
-      - altair==5.5.0
-      - antlr4-python3-runtime==4.9.3
-      - argparse==1.4.0
-      - arrow==1.3.0
-      - astunparse==1.6.3
-      - av==14.4.0
-      - banal==1.0.6
-      - bitsandbytes==0.46.1
-      - blinker==1.9.0
-      - braceexpand==0.1.7
-      - cachetools==5.5.2
-      - camelot-py==1.0.9
-      - certifi==2022.12.7
-      - chardet==5.2.0
-      - charset-normalizer==2.1.1
-      - click==8.1.7
-      - cmake==3.25.0
-      - cryptography==44.0.1
-      - dataclasses-json==0.6.7
-      - dataset==1.6.2
-      - datasets==4.0.0
-      - datetime==5.5
-      - dill==0.3.8
-      - distro==1.9.0
-      - docker-pycreds==0.4.0
-      - einops==0.8.1
-      - et-xmlfile==2.0.0
-      - fairscale==0.4.0
-      - faiss-cpu==1.10.0
-      - flatbuffers==25.2.10
-      - fqdn==1.5.1
-      - fsspec==2024.10.0
-      - ftfy==6.3.1
-      - gast==0.6.0
-      - gitdb==4.0.11
-      - gitpython==3.1.43
-      - google-ai-generativelanguage==0.6.15
-      - google-api-core==2.24.2
-      - google-api-python-client==2.166.0
-      - google-auth==2.38.0
-      - google-auth-httplib2==0.2.0
-      - google-generativeai==0.8.4
-      - google-pasta==0.2.0
-      - googleapis-common-protos==1.69.2
+      - accelerate
+      - albumentations
+      - bitsandbytes
+      - datasets
+      - einops
+      - faiss-cpu
+      - google-generativeai
       - googletrans==4.0.0rc1
-      - grpcio==1.71.0
-      - grpcio-status==1.71.0
-      - h2==3.2.0
-      - h5py==3.13.0
-      - hf-xet==1.1.4
-      - hpack==3.0.0
-      - hstspreload==2025.1.1
-      - httpcore==1.0.8
-      - httplib2==0.22.0
-      - httpx==0.28.1
-      - httpx-sse==0.4.0
-      - huggingface-hub==0.34.3
-      - hydra-core==1.3.2
-      - hyperframe==5.2.0
-      - idna==2.10
-      - ijson==3.3.0
-      - isoduration==20.11.0
-      - jinja2==3.1.3
-      - jiter==0.9.0
-      - jpype1==1.5.2
-      - keras==3.8.0
-      - konlpy==0.6.0
-      - langchain==0.3.19
-      - langchain-community==0.3.17
-      - langchain-core==0.3.35
-      - langchain-text-splitters==0.3.6
-      - langdetect==1.0.9
-      - libauc==1.4.0
-      - libclang==18.1.1
-      - lightning-utilities==0.14.3
-      - lit==15.0.7
-      - littleutils==0.2.4
-      - lxml==6.0.0
-      - mako==1.3.10
-      - markdown==3.7
-      - markdown-it-py==3.0.0
-      - markupsafe==2.1.5
-      - marshmallow==3.26.1
-      - mdurl==0.1.2
-      - ml-dtypes==0.4.1
-      - multiprocess==0.70.16
-      - munch==4.0.0
-      - mypy-extensions==1.0.0
-      - namex==0.0.8
-      - narwhals==2.2.0
-      - nltk==3.9.1
-      - nvidia-cublas-cu12==12.6.4.1
-      - nvidia-cuda-cupti-cu12==12.6.80
-      - nvidia-cuda-nvrtc-cu12==12.6.77
-      - nvidia-cuda-runtime-cu12==12.6.77
-      - nvidia-cudnn-cu12==9.5.1.17
-      - nvidia-cufft-cu12==11.3.0.4
-      - nvidia-cufile-cu12==1.11.1.6
-      - nvidia-curand-cu12==10.3.7.77
-      - nvidia-cusolver-cu12==11.7.1.2
-      - nvidia-cusparse-cu12==12.5.4.2
-      - nvidia-cusparselt-cu12==0.6.3
-      - nvidia-ml-py==12.570.86
-      - nvidia-nccl-cu12==2.26.2
-      - nvidia-nvjitlink-cu12==12.6.85
-      - nvidia-nvtx-cu12==12.6.77
-      - nvitop==1.4.2
-      - ogb==1.3.6
-      - ollama==0.5.1
-      - omegaconf==2.3.0
-      - openai==1.98.0
-      - openai-clip==1.0.1
-      - openpyxl==3.1.5
-      - opt-einsum==3.4.0
-      - optree==0.14.0
-      - outcome==1.3.0.post0
-      - outdated==0.2.2
-      - patsy==1.0.1
-      - pdfminer-six==20250506
-      - pdfplumber==0.11.5
-      - peft==0.17.0
-      - pretrainedmodels==0.7.4
-      - propcache==0.2.1
-      - proto-plus==1.26.1
-      - protobuf==5.28.3
-      - py-hanspell==1.1
-      - pyarrow==19.0.0
-      - pyasn1==0.6.1
-      - pyasn1-modules==0.4.2
-      - pydantic-settings==2.7.1
-      - pydeck==0.9.1
-      - pykospacing==0.5
-      - pymupdf==1.25.3
-      - pypdf==3.17.4
-      - pypdfium2==4.30.1
-      - pyserial==3.5
-      - python-dotenv==1.0.1
-      - qwen-vl-utils==0.0.11
-      - rank-bm25==0.2.2
-      - redis==5.2.1
-      - regex==2024.11.6
-      - rfc3986==1.5.0
-      - rich==13.9.4
-      - rsa==4.9
-      - safetensors==0.4.5
-      - seaborn==0.13.2
-      - selenium==4.35.0
-      - sentence-transformers==5.0.0
-      - sentencepiece==0.2.0
-      - sentry-sdk==2.19.0
-      - setproctitle==1.3.4
-      - simsimd==6.2.1
-      - smmap==5.0.1
-      - sortedcontainers==2.4.0
-      - soyspacing==1.0.17
-      - sqlalchemy==1.4.54
-      - streamlit==1.49.1
-      - stringzilla==3.12.5
-      - sympy==1.14.0
-      - tabulate==0.9.0
-      - tclab==1.0.0
-      - tensorboard==2.18.0
-      - tensorboard-data-server==0.7.2
-      - tensorboardx==2.6.4
-      - tensorflow==2.18.0
-      - tensorflow-io-gcs-filesystem==0.37.1
-      - termcolor==2.5.0
-      - textblob==0.19.0
-      - tf-keras==2.18.0
-      - tiktoken==0.9.0
-      - timm==1.0.15
-      - tokenizers==0.21.4
-      - toml==0.10.2
-      - torch==2.7.1
-      - torch-geometric==2.6.1
-      - torchaudio==2.7.1
-      - torchcam==0.4.0
-      - torchmetrics==1.7.3
-      - torchscale==0.3.0
-      - torchvision==0.20.1
-      - transformers==4.54.1
-      - transformers-stream-generator==0.0.5
-      - trio==0.30.0
-      - trio-websocket==0.12.2
-      - triton==3.3.1
-      - trl==0.15.2
-      - types-python-dateutil==2.9.0.20250516
-      - typing-extensions==4.14.1
-      - typing-inspect==0.9.0
-      - undetected-chromedriver==3.5.5
-      - uri-template==1.3.0
-      - uritemplate==4.1.1
-      - urllib3==2.5.0
-      - wandb==0.18.7
-      - watchdog==6.0.0
-      - webcolors==24.11.1
-      - webdataset==1.0.2
-      - websockets==15.0.1
-      - werkzeug==3.1.3
-      - wikiextractor==3.0.6
-      - wrapt==1.17.2
-      - wsproto==1.2.0
-      - xgboost==3.0.2
-      - xxhash==3.5.0
-      - yarl==1.18.3
-      - zope-interface==7.2
-prefix: /home/aicontest/anaconda3/envs/construct
+      - huggingface-hub
+      - konlpy
+      - langchain
+      - langchain-community 
+      - langsmith
+      - nltk
+      - openai
+      - peft
+      - pdfplumber
+      - pypdf
+      - sentence-transformers
+      - soyspacing
+      - streamlit
+      - tensorboard
+      - tensorflow
+      - tf-keras 
+      - tokenizers
+      - transformers
+      - wandb
+      - xgboost
+      - camelot-py[cv]  
+      - PyMuPDF         
+      - frontend        
